// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorsPublicationsPerYearChart  should render component with no set class name 1`] = `
<div>
  <div
    class=" authors-publications-per-year-chart"
  />
</div>
`;

exports[`AuthorsPublicationsPerYearChart  should render empty chart component 1`] = `
<div>
  <div
    class="barChart authors-publications-per-year-chart"
  />
</div>
`;

exports[`AuthorsPublicationsPerYearChart  should render with default props 1`] = `
<div>
  <div
    class=" authors-publications-per-year-chart"
  />
</div>
`;
